[project]
name = "sdxl-litserve"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "torch<2.5,>=2.4",
    "torchvision>=0.19.0",
    "safetensors>=0.4.5",
    "hf-transfer>=0.1.8",
    "tqdm>=4.67.1",
    "transformers>=4.47.0",
    "diffusers>=0.31.0",
    "litserve>=0.2.5",
    "accelerate>=1.2.0",
    "pydantic>=2.10.3",
]

[tool.uv]
dev-dependencies = ["ruff>=0.8.0"]

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "platform_system != 'Darwin'" }]
torchvision = [
    { index = "pytorch-cu124", marker = "platform_system != 'Darwin'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
